# mapp

./: .gitignore  CITATION.cff  LICENSE  README.md
core/: .clang-format  CMakeLists.txt  README.md
core/cmake/: Doxyfile  config.txt
core/docker/: arch-linux-dockerfile  centos-8-dockerfile  fedora-34-dockerfile.def  opensuse-dockerfile  ubuntu-20.04-dockerfile  ubuntu-21.04-dockerfile
core/docs/source/: conf.py  index.rst
core/kubernetes/: exec-core-test.yml
core/python/: py_mapp_core.py  test_mapp_pipeline.py
core/singularity/: arch-linux.def  centos-8.def  fedora-34.def  opensuse.def  ubuntu-20.04.def  ubuntu-21.04.def
core/src/: main.cpp
core/src/mapp/algorithm/: managed.hpp  processor.hpp  protobuf_config.hpp
core/src/mapp/algorithm/non_compliant_algorithm/: non_compliant_algorithm.cpp  non_compliant_algorithm.hpp
core/src/mapp/algorithm/null_algorithm/: null_algorithm.cpp  null_algorithm.hpp
core/src/mapp/algorithm/throwing_algorithm/: throwing_algorithm.cpp  throwing_algorithm.hpp
core/src/mapp/filesystem/: fs.hpp  fs_setup.cpp  fs_setup.hpp
core/src/mapp/model/: data_model.hpp  data_model_interface.hpp
core/src/mapp/persistency/: file_persistency_format.hpp
core/src/mapp/pipeline/: sequence.hpp
core/src/mapp/python/: py_library_provider.cpp  py_library_provider.hpp  py_managed_processor.cpp  py_managed_processor.hpp  py_pipeline_sequence.cpp  py_pipeline_sequence.hpp  py_protobuf_config.cpp  py_protobuf_config.hpp  py_service_locator.cpp  py_service_locator.hpp  py_shared_ptr.hpp
core/src/mapp/services/: service.hpp  service_locator.hpp
core/src/mapp/status_code/: status_code.hpp
core/src/mapp/tests/: mockable.hpp
core/tests/benchmarks/: CMakeLists.txt
core/tests/benchmarks/src/: main.cpp
core/tests/coverage/: CMakeLists.txt
core/tests/coverage/src/: main.cpp  test_fs_setup.cpp  test_library.cpp  test_managed.cpp  test_mapp_core.cpp  test_processor.cpp  test_py_wrappers.cpp  test_sequence.cpp
data_models/: README.md
data_models/cuda_devices/: cuda_devices_info.proto
data_models/data_metadata/: data_metadata.proto
data_models/mymodule/: CMakeLists.txt  README.md  mymodule_config_data_model.proto  mymodule_data_model.hpp
data_models/pymodule_template/: .gitignore  CMakeLists.txt  pymodule_template_config_data_model.proto
data_models/run_metadata/: run_metadata.proto
modules/: README.md
modules/mymodule/: .gitignore  CMakeLists.txt  README.md
modules/mymodule/cmake/: Doxyfile
modules/mymodule/src/: mymodule.cpp  mymodule.hpp  mymodule_kernels.cu  mymodule_kernels.hpp
modules/mymodule/tests/benchmarks/: CMakeLists.txt
modules/mymodule/tests/benchmarks/src/: main.cpp
modules/mymodule/tests/coverage/: CMakeLists.txt
modules/mymodule/tests/coverage/src/: main.cpp  test_mymodule.cpp
modules/pymodule_template/: CMakeLists.txt  README.md
modules/pymodule_template/cmake/: doxygen.cmake
modules/pymodule_template/python/: pymodule_template.py
modules/pymodule_template/src/: pymodule_template.cpp  pymodule_template.hpp
modules/pymodule_template/tests/benchmarks/: CMakeLists.txt
modules/pymodule_template/tests/benchmarks/src/: main.cpp
modules/pymodule_template/tests/coverage/: CMakeLists.txt
modules/pymodule_template/tests/coverage/src/: test_pymodule_template.cpp
pipelines/: README.md  mapp-pipeline.py
